# accord

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  LICENSE  PLAN_V4.md  README.md  SECURITY.md  SPEC.md  ci.sh  deny.toml
.github/workflows/: ci.yml  pages.yml  release.yml
app/: eslint.config.js  index.html  package-lock.json  package.json  profile-showcase.html  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  globals.d.ts  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commandes.rs  erreur.rs  etat.rs  lib.rs  main.rs  tray.rs
app/src/components/: AppShell.test.tsx  AppShell.tsx  Attachments.test.tsx  Attachments.tsx  Avatar.test.tsx  Avatar.tsx  AvatarCropper.test.tsx  AvatarCropper.tsx  BackupImportButton.tsx  BodyText.tsx  ChatView.test.tsx  ChatView.tsx  ContextMenu.test.tsx  ContextMenu.tsx  (+83 more)
crates/accord-api/: Cargo.toml
crates/accord-api/src/: auth.rs  lib.rs  rpc.rs  server.rs
crates/accord-core/: Cargo.toml
crates/accord-crypto/: Cargo.toml
crates/accord-dht/: Cargo.toml
crates/accord-dht/src/: distance.rs  lib.rs  lookup.rs  node.rs  routing.rs  rpc.rs  store.rs  testnet.rs
crates/accord-node/: Cargo.toml
crates/accord-proto/: Cargo.toml
crates/accord-transport/: Cargo.toml
crates/accord-transport/src/: clock.rs  endpoint.rs  error.rs  frag.rs  lib.rs  nat.rs  ratelimit.rs  relay.rs  socket.rs  tcp.rs
crates/accord-transport/tests/: handshake_e2e.rs  hole_punch_e2e.rs  relay_e2e.rs  relay_tunnel_e2e.rs  tcp_link_e2e.rs
crates/accord-voice/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  COMMUNITY.md  DEV.md  DISTRIBUTION.md  NAT-FIRST-CONTACT.md  NAT_TRAVERSAL.md  THIRD_PARTY.md  THREAT-MODEL.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  deploy-site.sh  preparer-code-source.sh
website/: guide.html  index.html  nouveautes.html  releases.js  site.js  style.css
website/en/: index.html  whats-new.html
(+299 files in other folders)
