[package]
name = "accord-api"
description = "Serveur WebSocket JSON-RPC 2.0 local d'Accord (UI ↔ nœud)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
subtle.workspace = true
