[package]
name = "accord-transport"
description = "Couche transport d'Accord : UDP/TCP, sessions chiffrées, NAT traversal, relais, anti-DoS (SPEC.md §1, §2.5, §10, §11)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accord-proto = { path = "../accord-proto" }
accord-crypto = { path = "../accord-crypto" }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
socket2 = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "time", "sync"] }
